--- a/neefty/config/database.yml
+++ b/neefty/config/database.yml
@@ -19,9 +19,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql
+  adapter: mysql2
   database: neefty
+  encoding: utf8
   user: dbadmin
   password: t0nKS
-  pool: 5
-  timeout: 5000
+  host: 127.0.0.1
+  port: 3306
+
